--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,9 +19,9 @@
 		<h1>About Me</h1>
 		<div class="container">
 		<div class="row">
-			<div class="col-3"><img class="column" src="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\download.png" alt="Selfie Alt Text" title="Selfie Title Text"> </div>
+			<div class="col-3"><img class="column" src="download.png" alt="Selfie Alt Text" title="Selfie Title Text"> </div>
 			<div class="col-5"><p>My name is Erica and I am currently building my portfolio website. I am a full stack web development student based in Milwaukee, WI. I have also taken classes at the University of Wisconsin Green Bay and Milwaukee Area Technical College. I graduated high school from West Bend East. </p>
-			<div class="col-4"><img src="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\mil.PNG"></div>
+			<div class="col-4"><img src="mil.PNG"></div>
 		</div>
 	</div>
 	</body>
