--- a/dayOneProject.html
+++ b/dayOneProject.html
@@ -35,9 +35,9 @@
 			-produce high-quality, original content so that any text written on my portfolio site is <br>engaging and without spelling and grammar mistakes.<br>
 			-home page to be saved as ‘index.html’<br>
 		</p> 
-		<center><h3 class="column"><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\index.html">Final Product</a></h3></center>
+		<center><h3 class="column"><a href="index.html">Final Product</a></h3></center>
 		<!--add hyperlink to full size of image-->
-			<a href="https://www.milwaukeedowntown.com/sites/default/files/default_images/blog-header.jpg"><img class="resize" src="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\mainPgSc.png"></a>
+			<a href="https://www.milwaukeedowntown.com/sites/default/files/default_images/blog-header.jpg"><img class="resize" src="mainPgSc.png"></a>
 	</center>
 	</body>
 </html>
