--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<a href="contact.html">Contact Me</a>
 	</div>
 	<body>
-		<img src="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\mke.jpg" class="banner">
+		<img src="mke.jpg" class="banner">
 		<h1>My name is Erica.</h1>
 		<center>
 		<p id="thickID">Milwaukee based web development student.</p>
