--- a/projects.html
+++ b/projects.html
@@ -20,17 +20,17 @@
 		<center>
 		<p>Click the links below to view individual project pages.<br>
 			These pages include each project's goal, requirements, and final product.</p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\dayOneProject.html">Week 1 Projects</a><br></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectTwo.html">Week 2 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectThree.html">Week 3 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectFour.html">Week 4 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectFive.html">Week 5 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectSix.html">Week 6 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectSeven.html">Week 7 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectEight.html">Week 8 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectNine.html">Week 9 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectTen.html">Week 10 Projects</a></p>
-		<p><a href="C:\Users\erica\Desktop\devCodeCamp\week_01\Projects\day1Project\projectFinal.html">Week 11 & Week 12 Projects</a></p>
+		<p><a href="dayOneProject.html">Week 1 Projects</a><br></p>
+		<p><a href="projectTwo.html">Week 2 Projects</a></p>
+		<p><a href="projectThree.html">Week 3 Projects</a></p>
+		<p><a href="projectFour.html">Week 4 Projects</a></p>
+		<p><a href="projectFive.html">Week 5 Projects</a></p>
+		<p><a href="projectSix.html">Week 6 Projects</a></p>
+		<p><a href="projectSeven.html">Week 7 Projects</a></p>
+		<p><a href="projectEight.html">Week 8 Projects</a></p>
+		<p><a href="projectNine.html">Week 9 Projects</a></p>
+		<p><a href="projectTen.html">Week 10 Projects</a></p>
+		<p><a href="projectFinal.html">Week 11 & Week 12 Projects</a></p>
 	</center>
 	</body>
 </html>
