changed project 1 description page layout

--- a/dayOneProject.html
+++ b/dayOneProject.html
@@ -17,8 +17,18 @@
 	</div>
 	<body>
 		<h1>Portfolio Project</h1>
-		<h2 class="column">Goal of this project</h2>
-		<p class="column">Portfolio Web Site User Stories
+		<center>
+			<h3><a href="index.html">Final Product</a></h3>
+		</center>
+			<center>
+				<a href="https://www.milwaukeedowntown.com/sites/default/files/default_images/blog-header.jpg"><img class="resize" src="mainPgSc.png"></a>
+			</center>
+			<center>
+		<h2>Goal of this project</h2>
+	</center>
+	<center>
+		<div>
+		<p>Portfolio Web Site User Stories
 			Goal: Build a four-page portfolio web site that follows <br>
 			HTML & CSS best practices<br>
 			Technologies: HTML, CSS, Bootstrap, Design Practices<br>
@@ -35,9 +45,8 @@
 			-produce high-quality, original content so that any text written on my portfolio site is <br>engaging and without spelling and grammar mistakes.<br>
 			-home page to be saved as ‘index.html’<br>
 		</p> 
-		<center><h3 class="column"><a href="index.html">Final Product</a></h3></center>
-		<!--add hyperlink to full size of image-->
-			<a href="https://www.milwaukeedowntown.com/sites/default/files/default_images/blog-header.jpg"><img class="resize" src="mainPgSc.png"></a>
+	</div>
+</center>
 	</center>
 	</body>
 </html>
