fixed map responsive

--- a/dayOneProject.html
+++ b/dayOneProject.html
@@ -21,7 +21,7 @@
 			<h3><a href="index.html">Final Product</a></h3>
 		</center>
 			<center>
-				<a href="https://www.milwaukeedowntown.com/sites/default/files/default_images/blog-header.jpg"><img class="resize" src="mainPgSc.png"></a>
+				<img class="resize" src="mainPgSc.png">
 			</center>
 			<center>
 		<h2>Goal of this project</h2>
