--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<a href="contact.html">Contact Me</a>
 	</div>
 	<body>
-		<img src="mke.jpg" class="banner">
+		<a href="https://www.milwaukeedowntown.com/sites/default/files/default_images/blog-header.jpg"><img src="mke.jpg" class="banner"></a>
 		<h1>My name is Erica.</h1>
 		<center>
 		<p id="thickID">Milwaukee based web development student.</p>
