--- a/aboutMe.html
+++ b/aboutMe.html
@@ -20,9 +20,9 @@
 		<div class="container">
 		<div class="row">
 			<div class="col-3"><img class="column" src="download.png" alt="Selfie Alt Text" title="Selfie Title Text"></div>
-			<div class="col-5"><p>My name is Erica and I am currently building my portfolio website. I am a full stack web development student based in Milwaukee, WI. I have also taken classes at the University of Wisconsin Green Bay and Milwaukee Area Technical College. I graduated high school from West Bend East. </p>
+			<div class="col-5"><p>My name is Erica and I am currently building my portfolio website. I am a full stack web development student based in Milwaukee, WI. I am currently attending devCodeCamp. I have also taken classes at the University of Wisconsin Green Bay and Milwaukee Area Technical College. I graduated high school from West Bend East. </p>
 			<div class="col-12">
-				<img class="responsive" src="mil.png" alt="map"></div>
+				<img src="mil.png" alt="map"></div>
 		</div>
 	</div>
 	</body>
