--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,7 +22,7 @@
 			<div class="col-3"><img class="column" src="download.png" alt="Selfie Alt Text" title="Selfie Title Text"></div>
 			<div class="col-5"><p>My name is Erica and I am currently building my portfolio website. I am a full stack web development student based in Milwaukee, WI. I am currently attending devCodeCamp. I have also taken classes at the University of Wisconsin Green Bay and Milwaukee Area Technical College. I graduated high school from West Bend East. </p>
 			<div class="col-12">
-				<img class="column" src="map.png" alt="map"></div>
+				<img class="column" src="map.jpg" alt="map"></div>
 		</div>
 	</div>
 	</body>
