--- a/projectThree.html
+++ b/projectThree.html
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="erica,demo">
 		<meta name="author" content="Erica">
 		<link rel="stylesheet" type="text/css" href="styles.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<div class="topnav">
 		<a href="index.html">Home</a>
@@ -17,10 +18,21 @@
 	<body>
 		<h1>Project</h1>
 		<center>
+			<h3><a href="">Final Product</a></h3>
+		</center>
+			<center>
+				<img class="resize" src="" alt="placehold">
+			</center>
+			<center>
 		<h2>Goal of this project</h2>
 	</center>
+	<center>
+		<div>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore<br>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea <br>commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat <br>nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim <br>id est laborum.
-</p>
+		</p>
+	</div>
+</center>
+	</center>
 	</body>
 </html>
