modified text on project 1 page

--- a/dayOneProject.html
+++ b/dayOneProject.html
@@ -28,11 +28,8 @@
 	</center>
 	<center>
 		<div>
-		<p>Portfolio Web Site User Stories
-			Goal: Build a four-page portfolio web site that follows <br>
+		<p>	Goal: Build a four-page portfolio web site that follows <br>
 			HTML & CSS best practices<br>
-			Technologies: HTML, CSS, Bootstrap, Design Practices<br>
-			<a href="https://themetrust.com/most-important-features-for-portfolio-sites/">Extra Resources: Most important features for portfolio sites</a> <br>
 			Requirements: <br>
 			-make a wireframe for my website so that my portfolio site has a design to follow.<br>
 			-build a ‘home’ page.<br>
