added social media icons to all footers

--- a/index.html
+++ b/index.html
@@ -21,4 +21,9 @@
 		<center>
 		<p id="thickID">Milwaukee based web development student.</p>
 	</body>
+	<footer>
+			<a href="https://www.instagram.com/erica_gilhuber/?hl=en"><img src="instaIcon.svg" class="newsize"></a>
+			<a href="https://www.linkedin.com/in/erica-gilhuber-865a69188/"><img src="linkedinIcon.svg" class="newsize"></a>
+			<a href="https://twitter.com/ericagilhuber"><img src="twitterIcon.svg" class="newsize"></a>
+	</footer>
 </html>
