--- a/dayOneProject.html
+++ b/dayOneProject.html
@@ -46,4 +46,9 @@
 </center>
 	</center>
 	</body>
+	<footer>
+			<a href="https://www.instagram.com/erica_gilhuber/?hl=en"><img src="instaIcon.svg" class="newsize"></a>
+			<a href="https://www.linkedin.com/in/erica-gilhuber-865a69188/"><img src="linkedinIcon.svg" class="newsize"></a>
+			<a href="https://twitter.com/ericagilhuber"><img src="twitterIcon.svg" class="newsize"></a>
+	</footer>
 </html>
