centered social media icons

--- a/contact.html
+++ b/contact.html
@@ -47,9 +47,11 @@
 				<td>egilhuber</td>
 			</tr>
 	</body>
+	<center>
 	<footer>
 			<a href="https://www.instagram.com/erica_gilhuber/?hl=en"><img src="instaIcon.svg" class="newsize"></a>
 			<a href="https://www.linkedin.com/in/erica-gilhuber-865a69188/"><img src="linkedinIcon.svg" class="newsize"></a>
 			<a href="https://twitter.com/ericagilhuber"><img src="twitterIcon.svg" class="newsize"></a>
 	</footer>
+</center>
 </html>
