--- a/projectSeven.html
+++ b/projectSeven.html
@@ -35,9 +35,11 @@
 </center>
 	</center>
 	</body>
+	<center>
 	<footer>
 			<a href="https://www.instagram.com/erica_gilhuber/?hl=en"><img src="instaIcon.svg" class="newsize"></a>
 			<a href="https://www.linkedin.com/in/erica-gilhuber-865a69188/"><img src="linkedinIcon.svg" class="newsize"></a>
 			<a href="https://twitter.com/ericagilhuber"><img src="twitterIcon.svg" class="newsize"></a>
 	</footer>
+</center>
 </html>
