--- a/projects.html
+++ b/projects.html
@@ -33,9 +33,11 @@
 		<p><a href="projectFinal.html">Week 11 & Week 12 Projects</a></p>
 	</center>
 	</body>
+	<center>
 	<footer>
 			<a href="https://www.instagram.com/erica_gilhuber/?hl=en"><img src="instaIcon.svg" class="newsize"></a>
 			<a href="https://www.linkedin.com/in/erica-gilhuber-865a69188/"><img src="linkedinIcon.svg" class="newsize"></a>
 			<a href="https://twitter.com/ericagilhuber"><img src="twitterIcon.svg" class="newsize"></a>
 	</footer>
+</center>
 </html>
