--- a/sendLanding.html
+++ b/sendLanding.html
@@ -22,9 +22,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+  <center>
   <footer>
       <a href="https://www.instagram.com/erica_gilhuber/?hl=en"><img src="instaIcon.svg" class="newsize"></a>
       <a href="https://www.linkedin.com/in/erica-gilhuber-865a69188/"><img src="linkedinIcon.svg" class="newsize"></a>
       <a href="https://twitter.com/ericagilhuber"><img src="twitterIcon.svg" class="newsize"></a>
   </footer>
+</center>
 </html>
