updated pages for project 2

--- a/dayOneProject.html
+++ b/dayOneProject.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Portfolio Project</title>
+		<title>Project 1 - Portfolio</title>
 		<meta name="description" content="A couple sentences describing the website">
 		<meta name="keywords" content="erica,demo">
 		<meta name="author" content="Erica">
@@ -28,9 +28,8 @@
 	</center>
 	<center>
 		<div>
-		<p>	Goal: Build a four-page portfolio web site that follows <br>
-			HTML & CSS best practices<br>
-			Requirements: <br>
+		<p>	
+			-Build a four-page portfolio web site that follows HTML & CSS best practices<br>
 			-make a wireframe for my website so that my portfolio site has a design to follow.<br>
 			-build a ‘home’ page.<br>
 			-build an ‘about me’ page.<br>
