--- a/projectTwo.html
+++ b/projectTwo.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Project</title>
+		<title>Project 2 - Dice Game</title>
 		<meta name="description" content="A couple sentences describing the website">
 		<meta name="keywords" content="erica,demo">
 		<meta name="author" content="Erica">
@@ -16,24 +16,33 @@
 		<a href="contact.html">Contact Me</a>
 	</div>
 	<body>
-		<h1>Project</h1>
+		<h1>Dice Game</h1>
 		<center>
-			<h3><a href="">Final Product</a></h3>
+			<h3><a href="playerQuantitySplashPage.html">Final Product</a></h3>
 		</center>
 			<center>
-				<img class="resize" src="" alt="placehold">
+				<img class="resize" src="singlePlayerSnip.png" alt="single player">
+				<img class="resize" src="multiPlayerSnip.png" alt="multiplayer">
+				<img class="resize" src="splashSnip.png" alt="splash page">
 			</center>
-			<center>
-		<h2>Goal of this project</h2>
-	</center>
-	<center>
-		<div>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore<br>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea <br>commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat <br>nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim <br>id est laborum.
-		</p>
-	</div>
-</center>
-	</center>
+		<center>
+		<h2>Goals of this project</h2>
+			<p>
+				Game must:<br>
+				-be played with dice and more complicated than war<br>
+				-have gameplay functionality<br>
+				-have one function to roll dice, regardless of sides<br>
+				-utilize 6 different polyhedral dice<br>
+				-make consistent commits to repository with good, detailed messages<br>
+				-have two player capability<br>
+				-have a responsive button to roll dice<br>
+				-continue until game is won or lost<br>
+				-have an automated bonus round<br>
+				-allow player to select die for scoring<br>
+				-have visuals for dice<br>
+				-have an interactive front end with responsive score card<br>
+			</p>
+		</center>
 	</body>
 	<center>
 	<footer>
