added instructions to single player dice game

--- a/diceGame.html
+++ b/diceGame.html
@@ -29,6 +29,7 @@
 		<!-- <p id="demo"></p> -->
 <!-- 	</center> -->
 	<center>
+		<p>You must click 'Begin Game' to start playing.</p>
 	<div id="startGame">
 		<button id="startTheGame" onclick="startGame()">Begin Game</button>
 	</div>
