tweaked contact page form

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,8 @@
 	</div>
 	<body>
 		<h1>Contact Me</h1>
-		<form action="sendLanding.html">
+		<center>
+		<form action="sendLanding.html" method="post" enctype="text/plain" >
 		<fieldset id="contForm">
 			<legend>Please enter information.</legend>
 			First Name: <input type="text" name="firstName"><br>
@@ -28,6 +29,8 @@
 			<br>
 			<input type="submit" value="Submit">
 		</fieldset> 
+		</form>
+	</center>
 		<center>
 		<table id="infoTable" style="width:50%">
 			<tr>
