--- a/projectTen.html
+++ b/projectTen.html
@@ -31,6 +31,10 @@
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore<br>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea <br>commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat <br>nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim <br>id est laborum.
 		</p>
+		<img class="resize" src="C:\Users\erica\Documents\devCodeCamp\week_01\Projects\day1Project\chosen\SquareBlackAndWhiteCircleWCup.png" alt="square">
+		<img class="resize" src="C:\Users\erica\Documents\devCodeCamp\week_01\Projects\day1Project\chosen\BlackAndWhiteCircleWCup.png" alt="standard">
+		<img class="resize" src="C:\Users\erica\Documents\devCodeCamp\week_01\Projects\day1Project\chosen\NoCircleBlackAndWhiteWCup.png" alt="small">
+
 	</div>
 </center>
 	</center>
