--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Homepage</title>
-		<meta name="description" content="A couple sentences describing the website">
-		<meta name="keywords" content="erica,demo">
-		<meta name="author" content="Erica">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="styles.css">
-	</head>
-	<div class="topnav">
-		<a class="active" href="index.html">Home</a>
-		<a href="aboutMe.html">About Me</a>
-		<a href="projects.html">Projects</a>
-		<a href="contact.html">Contact Me</a>
-	</div>
-	<body>
-		<a href="https://www.milwaukeedowntown.com/sites/default/files/default_images/blog-header.jpg"><img src="mke.jpg" class="banner"></a>
-		<h1>My name is Erica.</h1>
-		<center>
-		<p id="thickID">Milwaukee based web development student.</p>
-	</body>
-	<center>
-	<footer>
-			<a href="https://www.instagram.com/erica_gilhuber/?hl=en"><img src="instaIcon.svg" class="newsize"></a>
-			<a href="https://www.linkedin.com/in/erica-gilhuber-865a69188/"><img src="linkedInIcon.svg" class="newsize"></a>
-			<a href="https://twitter.com/ericagilhuber"><img src="twitterIcon.svg" class="newsize"></a>
-	</footer>
-</center>
+	<style>
+		body {
+		  background-image: url('underConstruction.png');
+		}
+		</style>
 </html>
